kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: dan-devops-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
