kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-tech-application-service
spec:
  selector:
    app: devops-tech-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9002
  type: ClusterIP
